--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
+html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  background: rgb(252, 231, 222);
+  background: linear-gradient(335deg, rgba(252, 231, 222, 1) 20%, rgba(252, 248, 222, 1) 40%, rgba(222, 252, 224, 1) 60%, rgba(222, 242, 252, 1) 80%, #f0defd 100%);
+  background-size: cover;
+  height: 100%;
+  background-attachment: fixed;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* .backgroundWrap {
+  background: #fff;
+  border-radius: 10px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -300px;
+  margin-left: -600px;
+  width: 960px;
+  padding: 30px 130px 130px 95px;
+} */
